feat: update users endpoints
